--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://spin.fi/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta name="description" content="Spin test task" />
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/gh/nearprotocol/near-api-js/dist/near-api-js.js"></script>
+    <title>Spin Test Task</title>
   </head>
+  <script type="module" src="types.js"></script>
+  <script type="module" src="config.js"></script>
+  <script type="module" src="store.js"></script>
+  <script type="module" src="state.js"></script>
+  <script type="module" src="view.js"></script>
+  <script type="module" src="auth.js"></script>
+  <script type="module" src="balance.js"></script>
+  <script type="module" src="markets.js"></script>
+  <script type="module" src="orderBook.js"></script>
+  <script type="module" src="index.js"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <div id="signed-out" style="display: none">
+      <img id="logo" src="https://spin.fi/favicon.svg"/>
+      <input id="wallet-address" placeholder="Wallet address: <username>.testnet"/>
+      <button id="sign-in" class="button">Sign In</button>
+    </div>
+    <div id="signed-in" style="display: none">
+      <h3 id="wallet-header">
+        <spin>
+          Wallet: <spin id="wallet-account"></spin>
+        </spin>
+        <button id="sign-out" class="button">Sign Out</button></h3>
+      <div id="wallet">
+        <div>Available Balance: <span id="balance" style="padding: 0.2em 0.5em"></span></span></div>
+      </div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      <h3>Spin contract</h3>
+      <div id="spin-contract">
+        <select id="select-market" style="display: none"></select>
+        <table id="order-book" style="display: none"></table>
+      </div>
+    </div>
+    <div id="signed-pending" style="display: none">Signing in...</div>
   </body>
 </html>
